--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,32 @@
+version: '3.8'
+
 services:
   postgres:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER: asksef
-      POSTGRES_PASSWORD: asksef59
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      # POSTGRES_DB: mservice_db
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      #- postgres:/data/postgres
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     ports:
       - "5432:5432"
-    networks:
-      - postgres
     restart: unless-stopped
 
   pgadmin:
-    container_name: pgadmin
+    container_name: pgadmin_container
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
     volumes:
-      - pgadmin:/var/lib/pgadmin
-
+      #- pgadmin:/var/lib/pgadmin
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     ports:
       - "5050:80"
-
-    networks:
-      - postgres
     restart: unless-stopped
-
-networks:
-  postgres:
-    driver: bridge
-
-volumes:
-  postgres:
-  pgadmin:
