coding corrections to make it run error free

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -2,18 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<!--    <parent>-->
-<!--        <groupId>com.amigoscodecode</groupId>-->
-<!--        <artifactId>microservices</artifactId>-->
-<!--                <version>1.0-SNAPSHOT</version>-->
-<!--    </parent>-->
     <parent>
-        <groupId>com.amigoscode</groupId>
-        <artifactId>amigosservices</artifactId>
+        <groupId>com.asksef</groupId>
+        <artifactId>microservices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+<!--    <packaging>jar</packaging>-->
     <artifactId>customer</artifactId>
 
 <!--    <build>-->
@@ -39,8 +34,8 @@
 <!--    </profiles>-->
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -53,11 +48,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
